<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/emailortext" />
			
            <EditText
                android:id="@+id/contactinfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContactChooseDefaultText" >
             
             
                

                <requestFocus />
            </EditText>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topReminderFrequency"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/FrequencyEditText"
                        android:layout_width="41dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:inputType="number" />

                    <Spinner
                        android:id="@+id/fr"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/Interval" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/EnterZero"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sendATotalOf"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/numberOfReminders"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminders"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ChooseDateText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ReminderTimeString"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/cancelConfig"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="46dp"
                    android:text="@string/Cancel" />

                <Button
                    android:id="@+id/nextConfig"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="46dp"
                    android:text="@string/Next" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>